--- a/Ionic/Application/www/templates/tab-calculate.html
+++ b/Ionic/Application/www/templates/tab-calculate.html
@@ -4,11 +4,12 @@
       <label for="fader">Income</label>
       <input
         type="range"
-        name="inputIncome"
-        min="5000" max="250000" value="{{income}}"
+        name="income"
+        ng-model="income"
+        min="5000" max="250000"
         id="fader"
         oninput="outputUpdate(value)">
-      <output for="fader" id="inputIncome">{{income}}</output>
+      <output for="fader" >{{income}}</output>
     </div>
   </ion-content>
 </ion-view>
