Push income through currency filter

--- a/Ionic/Application/www/templates/tab-calculate.html
+++ b/Ionic/Application/www/templates/tab-calculate.html
@@ -9,7 +9,7 @@
         min="5000" max="250000"
         id="fader"
         oninput="outputUpdate(value)">
-      <output for="fader" >{{income}}</output>
+      <output for="fader" >{{income | currency}}</output>
     </div>
   </ion-content>
 </ion-view>
