--- a/Ionic/Application/www/templates/tab-calculate.html
+++ b/Ionic/Application/www/templates/tab-calculate.html
@@ -2,12 +2,7 @@
   <ion-content>
     <div class="item range range-positive">
       <label for="fader">Income</label>
-      <input
-        type="range"
-        ng-model="income"
-        min="5000" max="250000"
-        id="fader"
-        oninput="outputUpdate(value)">
+      <input type="range" ng-model="income" min="5000" max="250000" id="fader">
       <output for="fader" >{{income | currency}}</output>
     </div>
   </ion-content>
