--- a/Ionic/Application/www/templates/tab-calculate.html
+++ b/Ionic/Application/www/templates/tab-calculate.html
@@ -1,9 +1,5 @@
 <ion-view view-title="Calculate">
   <ion-content>
-    <div class="item range range-positive">
-      <label for="fader">Income</label>
-      <input type="range" ng-model="income" min="5000" max="250000" id="fader">
-      <output for="fader" >{{income | currency}}</output>
-    </div>
+    <money-slider title="Income" start="45000" min="5000" max="250000"/>
   </ion-content>
 </ion-view>
