Added new sliders for all user input data. Got Angular directive sliders to work by wrapping in div. Added angular-translate, configured, and moved text out to translation script.

--- a/Ionic/Application/www/templates/opf-money-slider.html
+++ b/Ionic/Application/www/templates/opf-money-slider.html
@@ -1,5 +1,5 @@
 <div class="item range range-positive">
-  <label>{{title}}</label>
+  <label>{{title | translate}}</label>
   <input type="range" ng-model="money" min="{{min}}" max="{{max}}"/>
   <output>{{money | currency}}</output>
 </div>
