--- a/Ionic/Application/www/templates/opf-interest-slider.html
+++ b/Ionic/Application/www/templates/opf-interest-slider.html
@@ -1,5 +1,5 @@
 <div class="item range range-positive">
-  <label>{{title}}</label>
+  <label>{{title | translate}}</label>
   <input type="range" ng-model="interest" min="{{min}}" max="{{max}}"/>
   <output>{{interest}}%</output>
 </div>
