--- a/Ionic/Application/www/templates/tab-calculate.html
+++ b/Ionic/Application/www/templates/tab-calculate.html
@@ -6,15 +6,20 @@
       <ion-item align="center">{{'calculate_monthlySavings' | translate}} = {{monthlySavings() | currency}}</ion-item>
       <ion-item align="center">{{'calculate_monthlySpending' | translate}} = {{monthlySpending() | currency}}</ion-item>
       <ion-item align="center"> {{'calculate_yearlySpending' | translate}} = {{yearlySpending() | currency}}</ion-item>
+      <ion-item align="center"> {{'calculate_retirementDate' | translate}} {{retireDate() | date}}</ion-item>
+      <ion-item align="center"> {{'calculate_yearsToRetirement' | translate}} {{yearsToRetire() | number}} years</ion-item>
+      <ion-item align="center"> {{'calculate_nestEgg' | translate}} = {{nestEgg() | currency}}</ion-item>
+
     </ion-list>
 
     <h5 align="center">Inputs</h4>
     <!--Something odd about directives means we wrap our sliders in divs-->
-    <div><opf-interest-slider ng-model="expectedReturn" title="calculate_expectedReturn" min="0" max="40"/></div>
-    <div><opf-interest-slider ng-model="withdrawalRate" title="calculate_withdrawalRate" min="0" max="40"/></div>
+
     <div><opf-interest-slider ng-model="savingRate" title="calculate_savingRate" min="0" max="100"/></div>
     <div><opf-money-slider ng-model="monthlyIncome" title="calculate_monthlyIncome" min="0" max="20000"/></div>
     <div><opf-money-slider ng-model="currentNetWorth" title="calculate_currentNetWorth" min="0" max="1000000"/></div>
+    <div><opf-interest-slider ng-model="expectedReturn" title="calculate_expectedReturn" min="0" max="40"/></div>
+    <div><opf-interest-slider ng-model="withdrawalRate" title="calculate_withdrawalRate" min="0" max="40"/></div>
 
   </ion-content>
 </ion-view>
