Changed the CalculateCtrl implementation to use properties on the scope. Fix for infinite loop in calculations. Changed the range max on the interest sliders to 25. Dropped the cents on all our money displays. Implemented the retire date display.

--- a/Ionic/Application/www/templates/opf-money-slider.html
+++ b/Ionic/Application/www/templates/opf-money-slider.html
@@ -1,5 +1,5 @@
 <div class="item range range-positive">
   <label>{{title | translate}}</label>
   <input type="range" ng-model="money" min="{{min}}" max="{{max}}"/>
-  <output>{{money | currency}}</output>
+  <output>{{money | currency:undefined:0}}</output>
 </div>
