--- a/Ionic/Application/www/templates/tab-calculate.html
+++ b/Ionic/Application/www/templates/tab-calculate.html
@@ -1,25 +1,44 @@
 <ion-view view-title="{{'calculate_viewTitle' | translate}}">
   <ion-content scroll="true">
 
-    <h5 align="center">Retirement</h4>
-    <ion-list type="card">
-      <ion-item align="center">{{'calculate_monthlySavings' | translate}} = {{monthlySavings | currency:undefined:0}}</ion-item>
-      <ion-item align="center">{{'calculate_monthlySpending' | translate}} = {{monthlySpending | currency:undefined:0}}</ion-item>
-      <ion-item align="center">{{'calculate_yearlySpending' | translate}} = {{yearlySpending | currency:undefined:0}}</ion-item>
-      <ion-item align="center">{{'calculate_retirementDate' | translate}} {{retireDate | date}}</ion-item>
-      <ion-item align="center">{{'calculate_yearsToRetirement' | translate}} {{yearsToRetire | number}} years</ion-item>
-      <ion-item align="center">{{'calculate_nestEgg' | translate}} = {{nestEgg | currency:undefined:0}}</ion-item>
-
-    </ion-list>
-
-    <h5 align="center">Current</h4>
-    <!--Something odd about directives means we wrap our sliders in divs-->
+    <ion-slide-box does-continue="true" auto-play="false">
+      <ion-slide align="center">
+        <div >
+          <h2>{{yearsToRetire | number}} years</h2>
+          <p>{{'calculate_yearsToRetirement' | translate}}</p>
+        </div>
+        <div>
+          <h2>{{nestEgg | currency:undefined:0}}</h2>
+          <p>{{'calculate_nestEgg' | translate}}</p>
+        </div>
+        <div>
+          <h2>{{retireDate | date}}</h2>
+          <p>{{'calculate_retirementDate' | translate}} </p>
+        </div>
+      </ion-slide>
+      <ion-slide align="center">
+        <div >
+          <h2>{{monthlySavings | currency:undefined:0}}</h2>
+          <p>{{'calculate_monthlySavings' | translate}}</p>
+        </div>
+        <div>
+          <h2>{{monthlySpending | currency:undefined:0}}</h2>
+          <p>{{'calculate_monthlySpending' | translate}}</p>
+        </div>
+        <div>
+          <h2>{{yearlySpending | currency:undefined:0}}</h2>
+          <p>{{'calculate_yearlySpending' | translate}}</p>
+        </div>
+      </ion-slide>
+       <ion-slide align="center">
+        <div><h2>GRAPH GOES HERE</h2></div>
+      </ion-slide>
+    </ion-slide-box>
 
     <div><opf-interest-slider ng-model="savingRate" title="calculate_savingRate" min="0" max="100"/></div>
     <div><opf-money-slider ng-model="monthlyIncome" title="calculate_monthlyIncome" min="0" max="20000"/></div>
     <div><opf-money-slider ng-model="currentNetWorth" title="calculate_currentNetWorth" min="0" max="1000000"/></div>
-    <div><opf-interest-slider ng-model="expectedReturn" title="calculate_expectedReturn" min="0" max="25"/></div>
-    <div><opf-interest-slider ng-model="withdrawalRate" title="calculate_withdrawalRate" min="0" max="25"/></div>
-
+    <div><opf-interest-slider ng-model="expectedReturn" title="calculate_expectedReturn" min="1" max="10"/></div>
+    <div><opf-interest-slider ng-model="withdrawalRate" title="calculate_withdrawalRate" min="3" max="5"/></div>
   </ion-content>
 </ion-view>
