--- a/Ionic/Application/www/templates/tabs.html
+++ b/Ionic/Application/www/templates/tabs.html
@@ -3,11 +3,11 @@ Create tabs with an icon and label, using the tabs-positive style.
 Each tab's child <ion-nav-view> directive will have its own
 navigation history that also transitions its views in and out.
 -->
-<ion-tabs class="tabs-icon-top tabs-color-active-positive">
+<!-- <ion-tabs class="tabs-icon-top tabs-color-active-positive"> -->
 
   <!-- Calculator Tab -->
-  <ion-tab title="Calculate" icon-off="ion-ios-calculator-outline" icon-on="ion-ios-calculator" href="#/tab/calculate">
+  <!-- <ion-tab title="Calculate" icon-off="ion-ios-calculator-outline" icon-on="ion-ios-calculator" href="#/tab/calculate"> -->
     <ion-nav-view name="tab-calculate"></ion-nav-view>
-  </ion-tab>
+  <!-- </ion-tab> -->
 
-</ion-tabs>
+<!-- </ion-tabs> -->
