--- a/Ionic/Application/www/templates/tab-calculate.html
+++ b/Ionic/Application/www/templates/tab-calculate.html
@@ -36,8 +36,8 @@
     </ion-slide-box>
 
     <div><opf-interest-slider ng-model="savingRate" title="calculate_savingRate" min="0" max="100"/></div>
-    <div><opf-money-slider ng-model="monthlyIncome" title="calculate_monthlyIncome" min="0" max="20000"/></div>
-    <div><opf-money-slider ng-model="currentNetWorth" title="calculate_currentNetWorth" min="0" max="1000000"/></div>
+    <div><opf-money-slider ng-model="monthlyIncome" title="calculate_monthlyIncome" min="0" max="20000" step="100"/></div>
+    <div><opf-money-slider ng-model="currentNetWorth" title="calculate_currentNetWorth" min="0" max="1000000" step="100"/></div>
     <div><opf-interest-slider ng-model="expectedReturn" title="calculate_expectedReturn" min="1" max="10"/></div>
     <div><opf-interest-slider ng-model="withdrawalRate" title="calculate_withdrawalRate" min="3" max="5"/></div>
   </ion-content>
