--- a/Ionic/Application/www/templates/tab-calculate.html
+++ b/Ionic/Application/www/templates/tab-calculate.html
@@ -30,30 +30,20 @@
           <p>{{'calculate_yearlySpending' | translate}}</p>
         </div>
       </ion-slide>
-       <ion-slide align="center">
-        <div>
-          <div class="card">
-            <div class="item item-divider">
-              {{'calculate_chartTitle' | translate}}
-            </div>
-            <div class="item item-text-wrap">
-              <canvas id="line" class="chart chart-line" chart-data="data" 
-                                                 chart-labels="labels" 
-                                                 chart-legend="false" 
-                                                 chart-series="series" 
-                                                 chart-options="{showTooltips: false}" 
-                                                 chart-colours="colours">
-              </canvas>
-            </div>
-          </div>
-         </div>
+      <ion-slide align="center">
+        <div><opf-graph></opf-graph></div>
       </ion-slide>
     </ion-slide-box>
 
     <div><opf-interest-slider ng-model="savingRate" title="calculate_savingRate" min="0" max="100"/></div>
     <div><opf-money-slider ng-model="monthlyIncome" title="calculate_monthlyIncome" min="0" max="20000" step="100"/></div>
     <div><opf-money-slider ng-model="currentNetWorth" title="calculate_currentNetWorth" min="0" max="1000000" step="100"/></div>
+    
+    
+    <!--Take out return rate for now, assume 5%
     <div><opf-interest-slider ng-model="expectedReturn" title="calculate_expectedReturn" min="1" max="10"/></div>
-    <div><opf-interest-slider ng-model="withdrawalRate" title="calculate_withdrawalRate" min="3" max="5"/></div>
+    <!--Take out the withdrawl rate for now assume 4%
+      <div><opf-interest-slider ng-model="withdrawalRate" title="calculate_withdrawalRate" min="3" max="5"/></div>
+    -->
   </ion-content>
 </ion-view>
