--- a/Ionic/Application/www/templates/tab-info.html
+++ b/Ionic/Application/www/templates/tab-info.html
@@ -1,5 +1,26 @@
-<ion-view view-title="Hello World">
-  <ion-content scroll="true">
-    <p>Hello</p>
+<ion-view view-title="Information">
+  <ion-content scroll="false">
+    
+    <div class="info-tab">
+    
+      <div class="info-assumtions">
+        <h2>Assumtions</h2>
+        <a href='#/tab/withdrawl' class="button button-full button-stable icon-right ion-chevron-right">Withdrawl Rate</a>
+        <button class="button button-full button-stable icon-right ion-chevron-right">Return Rate</button>
+      </div>
+      
+      <div class="info-Details">
+        <h2>Details</h2>
+        <button class="button button-full button-stable icon-right ion-chevron-right">Details</button>
+      </div>
+      
+      <div class="info-opf">
+        <h2>About</h2>
+        <button class="button button-full button-stable icon-right ion-chevron-right">Open Personal Finance</button>
+      </div>
+      
+    
+    </div> 
+     
   </ion-content>
 </ion-view>
