--- a/Ionic/Application/www/templates/tabs.html
+++ b/Ionic/Application/www/templates/tabs.html
@@ -10,10 +10,13 @@ navigation history that also transitions its views in and out.
     <ion-nav-view name="tab-calculate"></ion-nav-view>
   </ion-tab>
   
+  <!-- Information Tab -->
   <ion-tab icon-off="ion-ios-information-outline" icon-on="ion-ios-information" href="#/tab/info">
     <ion-nav-view name="tab-info"></ion-nav-view>
   </ion-tab>
 
 </ion-tabs>
+
+
 
 
