changed misspelling of withdrawal in files

--- a/Ionic/Application/www/templates/tab-info.html
+++ b/Ionic/Application/www/templates/tab-info.html
@@ -5,7 +5,7 @@
     
       <div class="info-assumtions">
         <h2>Assumtions</h2>
-        <a href='#/tab/withdrawl' class="button button-full button-stable icon-right ion-chevron-right">Withdrawl Rate</a>
+        <a href='#/tab/withdrawal' class="button button-full button-stable icon-right ion-chevron-right">Withdrawal Rate</a>
         <button class="button button-full button-stable icon-right ion-chevron-right">Return Rate</button>
       </div>
       
