--- a/Ionic/Application/www/templates/tab-withdrawal.html
+++ b/Ionic/Application/www/templates/tab-withdrawal.html
@@ -1,12 +1,12 @@
-<ion-view view-title="WithDrawl Rate">
+<ion-view view-title="WithDrawal Rate">
    <ion-nav-buttons>
       <button href="#/tab/info" class="button"></button>
     </ion-nav-buttons>
   <ion-content scroll="false">
-    <p>Info about Withdrawl rate</p>
-    <p>Info about Withdrawl rate</p>
-    <p>Info about Withdrawl rate</p>
-    <p>Info about Withdrawl rate</p>
+    <p>Info about Withdrawal rate</p>
+    <p>Info about Withdrawal rate</p>
+    <p>Info about Withdrawal rate</p>
+    <p>Info about Withdrawal rate</p>
     <!-- right now data isn't shared between pages I will fix this 
       <div><opf-interest-slider ng-model="withdrawalRate" title="calculate_withdrawalRate" min="3" max="5"/></div>
     -->
