--- a/Ionic/Application/www/templates/opf-graph.html
+++ b/Ionic/Application/www/templates/opf-graph.html
@@ -2,8 +2,8 @@
   <div class="item item-divider">{{'calculate_chartTitle' | translate}}</div>
   <div class="item item-text-wrap">
     <canvas id="line" class="chart chart-line" 
-            chart-data="data" 
-            chart-labels="labels" 
+            chart-data="graphData" 
+            chart-labels="graphLabels" 
             chart-legend="false" 
             chart-options="{showTooltips: false}" 
             chart-colours="colours">
