Created factory service to allow us to share data between controller/pages.

--- a/Ionic/Application/www/templates/opf-graph.html
+++ b/Ionic/Application/www/templates/opf-graph.html
@@ -6,7 +6,7 @@
             chart-labels="graphLabels" 
             chart-legend="false" 
             chart-options="{showTooltips: false}" 
-            chart-colours="colours">
+            chart-colours="graphColours">
     </canvas>
   </div>
 </div>
