Added about, details and return rate page.  Added slider to return page

--- a/Ionic/Application/www/templates/tab-info.html
+++ b/Ionic/Application/www/templates/tab-info.html
@@ -6,17 +6,17 @@
       <div class="info-assumtions">
         <h2>Assumtions</h2>
         <a href='#/tab/withdrawal' class="button button-full button-stable icon-right ion-chevron-right">Withdrawal Rate</a>
-        <button class="button button-full button-stable icon-right ion-chevron-right">Return Rate</button>
+        <a href='#/tab/return' class="button button-full button-stable icon-right ion-chevron-right">Return Rate</a>
       </div>
       
       <div class="info-Details">
         <h2>Details</h2>
-        <button class="button button-full button-stable icon-right ion-chevron-right">Details</button>
+        <a href='#/tab/details' class="button button-full button-stable icon-right ion-chevron-right">Details</a>
       </div>
       
       <div class="info-opf">
         <h2>About</h2>
-        <button class="button button-full button-stable icon-right ion-chevron-right">Open Personal Finance</button>
+        <a href='#/tab/about' class="button button-full button-stable icon-right ion-chevron-right">Open Personal Finance</a>
       </div>
       
     
