--- a/Ionic/Application/www/templates/tab-withdrawal.html
+++ b/Ionic/Application/www/templates/tab-withdrawal.html
@@ -1,4 +1,4 @@
-<ion-view view-title="WithDrawal Rate">
+<ion-view view-title="Withdrawal %">
    <ion-nav-buttons>
       <button href="#/tab/info" class="button"></button>
     </ion-nav-buttons>
@@ -7,7 +7,7 @@
     <p>Info about Withdrawal rate</p>
     <p>Info about Withdrawal rate</p>
     <p>Info about Withdrawal rate</p>
-    <div><opf-interest-slider ng-model="withdrawalRate" title="calculate_withdrawalRate" min="3" max="5"/></div>
+    <div><opf-interest-slider ng-model="withdrawalRate" title="calculate_withdrawalRate" min="2" max="6"/></div>
     
   </ion-content>
 </ion-view>
