Forgot to save changes to return page from last commit

--- a/Ionic/Application/www/templates/tab-return.html
+++ b/Ionic/Application/www/templates/tab-return.html
@@ -1,6 +1,6 @@
 <ion-view view-title="Return %">
    <ion-nav-buttons>
-      <a href="#/tab/info" class="button"></a>
+      <button href="#/tab/info" class="button"></button>
     </ion-nav-buttons>
   <ion-content scroll="false">
     <p>Info about Return rate</p>
