Changed my tabs to use translations instead of hard coding strings.  Added explanations to Withdrawal page which doesn't use translations yet.

--- a/Ionic/Application/www/templates/tab-about.html
+++ b/Ionic/Application/www/templates/tab-about.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Open Personal Finance">
+<ion-view view-title="{{'about_viewTitle' | translate}}">
    <ion-nav-buttons>
       <button href="#/tab/info" class="button"></button>
     </ion-nav-buttons>
