--- a/Ionic/Application/www/templates/tab-details.html
+++ b/Ionic/Application/www/templates/tab-details.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Details">
+<ion-view view-title="{{'details_viewTitle' | translate}}">
    <ion-nav-buttons>
       <button href="#/tab/info" class="button"></button>
     </ion-nav-buttons>
