--- a/Ionic/Application/www/css/style.css
+++ b/Ionic/Application/www/css/style.css
@@ -6,7 +6,10 @@
     padding-top: 10px;
     padding-bottom: 60px;
 }
-
+.explanation p{
+  margin-left: 15px;
+  margin-right: 15px;
+}
 p {
   color: #000;
   background-color: inherit;
