--- a/Ionic/Application/www/templates/opf-interest-slider.html
+++ b/Ionic/Application/www/templates/opf-interest-slider.html
@@ -1,5 +1,7 @@
 <div class="item range range-positive">
   <label>{{title | translate}}</label>
-  <input type="range" ng-model="interest" step="{{step}}" min="{{min}}" max="{{max}}"/>
+  <input type="range" ng-model="interest" step="{{step}}" 
+                                          min="{{min}}" 
+                                          max="{{max}}"/>
   <output>{{interest}}%</output>
 </div>
