--- a/Ionic/Application/www/templates/tab-info.html
+++ b/Ionic/Application/www/templates/tab-info.html
@@ -1,22 +1,34 @@
-<ion-view view-title="Information">
+<ion-view view-title="{{'info_viewTitle' | translate}}">
   <ion-content scroll="false">
     
     <div class="info-tab">
     
       <div class="info-assumtions">
-        <h2>Assumtions</h2>
-        <a href='#/tab/withdrawal' class="button button-full button-stable icon-right ion-chevron-right">Withdrawal Rate</a>
-        <a href='#/tab/return' class="button button-full button-stable icon-right ion-chevron-right">Return Rate</a>
+        <h2>{{'info_assumptionsTitle' | translate}}</h2>
+        <a href='#/tab/withdrawal' 
+           class="button button-full button-stable icon-right ion-chevron-right">
+          {{'withdrawal_viewTitle' | translate}}
+        </a>
+        <a href='#/tab/return' 
+           class="button button-full button-stable icon-right ion-chevron-right">
+          {{'return_viewTitle' | translate}}
+        </a>
       </div>
       
       <div class="info-Details">
-        <h2>Details</h2>
-        <a href='#/tab/details' class="button button-full button-stable icon-right ion-chevron-right">Details</a>
+        <h2>{{'details_viewTitle' | translate}}</h2>
+        <a href='#/tab/details' 
+           class="button button-full button-stable icon-right ion-chevron-right">
+          {{'details_viewTitle' | translate}}
+        </a>
       </div>
       
       <div class="info-opf">
-        <h2>About</h2>
-        <a href='#/tab/about' class="button button-full button-stable icon-right ion-chevron-right">Open Personal Finance</a>
+        <h2>{{'info_aboutTitle' | translate}}</h2>
+        <a href='#/tab/about' 
+           class="button button-full button-stable icon-right ion-chevron-right">
+          {{'about_viewTitle' | translate}}
+        </a>
       </div>
       
     
