--- a/Ionic/Application/www/templates/tab-return.html
+++ b/Ionic/Application/www/templates/tab-return.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Return %">
+<ion-view view-title="{{'return_viewTitle' | translate}}">
    <ion-nav-buttons>
       <button href="#/tab/info" class="button"></button>
     </ion-nav-buttons>
@@ -7,7 +7,7 @@
     <p>Info about Return rate</p>
     <p>Info about Return rate</p>
     <p>Info about Return rate</p>
-     <div><opf-interest-slider ng-model="expectedReturn" title="calculate_expectedReturn" min="1" max="10"/></div>
+     <div><opf-interest-slider ng-model="expectedReturn" title="{{'return_returnSlider'}}" min="1" max="10"/></div>
     
   </ion-content>
 </ion-view>
