I have saving and loading working.  I should have committed more but I didn't

--- a/Ionic/Application/www/templates/tab-return.html
+++ b/Ionic/Application/www/templates/tab-return.html
@@ -7,7 +7,7 @@
     <p>Info about Return rate</p>
     <p>Info about Return rate</p>
     <p>Info about Return rate</p>
-     <div><opf-interest-slider ng-model="expectedReturn" title="{{'return_returnSlider'}}" min="1" max="10"/></div>
+     <div><opf-interest-slider ng-model="expectedReturn" title='return_returnSlider' min="1" max="10"/></div>
     
   </ion-content>
 </ion-view>
