--- a/Ionic/Application/www/templates/tab-withdrawal.html
+++ b/Ionic/Application/www/templates/tab-withdrawal.html
@@ -17,7 +17,7 @@
       <p>A withdrawal rate of 4% is used as a rule of thumb for many finacial advisors and is often called the "4% rule" or the "4% Safe Withdrawal Rate".  Of course it isn't perfect.  There are some problems with the 4% rule and many assumptions that went into the Trinity Study.</p>
       <p>If you are curious, we encourage you to research more.</p>
     </div>
-    <div><opf-interest-slider ng-model="withdrawalRate" title="withdrawal_withdrawalSlider" min="2" max="6"/></div>
+    <div><opf-interest-slider ng-model="withdrawalRate" title='withdrawal_withdrawalSlider' min="2" max="6"/></div>
     
   </ion-content>
 </ion-view>
