Corrected Withdrawal and Return Rate strings.  Also added about page strings.

--- a/Ionic/Application/www/templates/tab-about.html
+++ b/Ionic/Application/www/templates/tab-about.html
@@ -3,10 +3,9 @@
       <button href="#/tab/info" class="button"></button>
     </ion-nav-buttons>
   <ion-content scroll="false">
-    <p>Info about OPF</p>
-    <p>Info about OPF</p>
-    <p>Info about OPF</p>
-    <p>Info about OPF</p>
+    <p>{{'about_p1' | translate}}</p>
+    <p>{{'about_p2' | translate}}</p>
+    <p>{{'about_p3' | translate}}</p>
     
   </ion-content>
 </ion-view>
